--- a/app/views/static_pages/staff_usage.html.erb
+++ b/app/views/static_pages/staff_usage.html.erb
@@ -1,1 +1,84 @@
-美容師向け向け使い方ページ
+<div class="staff-usage">
+  <div class="row">
+    <div class="staff-usage-1 text-center">
+      <span class="first arrow-border">実践で経験を積もう！</span>
+      <div class="second">Hairiahで簡単モデル探し！月額９８０円で使い放題！技術を向上させてアシスタントを卒業しよう！</div>
+      <div class="third">スカウトされるかも！？Hairiahでフォロワーを増やせば美容室から声がかかるかも！</div>
+    </div>
+  </div>
+  <div class="hairiah-feature row text-center">
+    <span class="feature-text arrow-border">
+      Hairiah利用の流れ
+    </span>
+    <div class="feature-outer row">
+      <div class="col-md-3 text-center">
+        <div class="feature-inner">
+          <div class="feature-inner-text staff-usage-line-fix">
+            新規登録
+          </div>
+          <div class="feature-icon">
+            <i class="fa fa-id-badge"></i>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 text-center">
+        <div class="feature-inner">
+          <div class="feature-inner-text">
+            カットモデルを募集する
+          </div>
+          <div class="feature-inner-text">
+            or
+          </div>
+          <div class="feature-inner-text">
+            カットモデルに声を掛ける
+          </div>
+          <div class="feature-icon">
+            <i class="fa fa-search"></i>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 text-center">
+        <div class="feature-inner">
+          <div class="feature-inner-text staff-usage-line-fix">
+            メッセージでモデルと日程調整
+          </div>
+          <div class="feature-icon">
+            <i class="fa fa-comments-o"></i>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 text-center">
+        <div class="feature-inner">
+          <div class="feature-inner-text staff-usage-line-fix">
+            カット
+          </div>
+          <div class="feature-icon">
+            <i class="fa fa-cut"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="staff-usage-1 text-center">
+      <span class="first arrow-border">Hairiahの良さ</span>
+      <div class="second">モデルで練習する方が、ウイッグで練習するより効果的で、安く済みます。</div>
+      <div class="third">一ヶ月にいくらウイッグ購入していたのが、モデルでできるならば◯万円の節約</div>
+      <div class="fourth">技術の向上に寄与する割合、モデルであればウイッグのX倍（当サイト調べ）</div>
+    </div>
+  </div>
+  <div class="hairiah-feature row text-center">
+    <span class="feature-text arrow-border">
+      団体契約のご案内
+    </span>
+    <div class="group-text">
+      美容室、美容学校様が在籍美容師、学生の集団契約をご希望の方は下記までご連絡ください。お得なプランをご用意致します。
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="staff-usage-btn col-md-6 col-md-offset-3">
+      <%= link_to "会員登録する", staff_signup_page_path, class: "btn btn-primary" %>
+    </div>
+  </div>
+</div>
