--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -10,12 +10,12 @@
       <div class="about-text visible-sp">
         <p>Hairiah(ヘアリア)は、</p>
         <p>無料で髪を切りたい人と</p>
-        <p>カットモデルを募集する美容師を</p>
-        <p>マッチングさせるサービスです。</p>
+        <p>技術を向上させたい美容師を</p>
+        <p>マッチングするサービスです。</p>
       </div>
       <div class="about-text hidden-sp">
         <p>Hairiah(ヘアリア)は、無料で髪を切りたい人と</p>
-        <p>カットモデルを募集する美容師をマッチングさせるサービスです。</p>
+        <p>技術を向上させたい美容師をマッチングするサービスです。</p>
       </div>
     </div>
     <div class="hairiah-feature row text-center">
@@ -36,7 +36,7 @@
         <div class="col-md-3 text-center">
           <div class="feature-inner">
             <div class="feature-inner-text">
-              声がかかるor自分から応募！
+              声がかかるのを待つor自分から応募！
             </div>
             <div class="feature-icon">
               <i class="fa fa-search"></i>
@@ -57,7 +57,7 @@
     </div>
   </div>
 
-  <div class="row text-center">
+  <!-- <div class="row text-center">
     <div class="path-inner">
       <div class="text-center detail-text">
         <span class="arrow-border arrow-border-right">
@@ -68,11 +68,11 @@
         <i class="fa fa-search-plus"></i>
       </a>
     </div>
-  </div>
+  </div> -->
   <div class="row text-center">
     <span class="register-text arrow-border">さっそく会員登録</span>
     <div class="row">
-      <div class="col-xs-6 col-md-3 col-md-offset-3 text-center">
+      <div class="col-sm-6 text-center col-md-4 col-md-offset-2">
         <div class="path-inner">
           <div class="path-text-outer">
             髪を切ってほしい方
@@ -82,7 +82,7 @@
           </a>
         </div>
       </div>
-      <div class="col-xs-6 col-md-3 text-center">
+      <div class="col-sm-6 text-center col-md-4">
         <div class="path-inner">
           <div class="path-text-outer">
             美容師の方
