--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -18,7 +18,7 @@
         <p>技術を向上させたい美容師をマッチングするサービスです。</p>
       </div>
     </div>
-    <div class="hairiah-feature row text-center">
+    <div class="hairiah-feature row text-center" id="usage">
       <span class="feature-text arrow-border">
         Hairiahの簡単な利用方法
       </span>
