--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -106,7 +106,9 @@ aside {
   overflow: auto;
   margin-top: 0;
   padding: 0;
-  font-size: 0.8em;
+  .col-xs-12 {
+    padding: 0;
+  }
   a {
     float: left;
     padding: 0 10px;
@@ -122,7 +124,7 @@ aside {
     }
   }
   strong {
-    display: block;
+    display: inline-block;
   }
 }
 
