--- a/app/views/applies/new.html.erb
+++ b/app/views/applies/new.html.erb
@@ -1,14 +1,12 @@
-<h1>応募フォーム</h1>
-
-<div class="row">
-  <div class="col-md-6 col-md-offset-3 col-xs-10 col-xs-offset-1">
+<div class="post-container">
+  <h1>応募フォーム</h1>
+  <div class="row">
     <%= form_for([@micropost, @apply]) do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
       <div class="form-group">
         <%= f.label :memo, "備考欄（応募にあたって伝えておきたいこと）" %>※任意
-        <%= f.text_field :memo, class: 'form-control' %>
+        <%= f.text_area :memo, class: 'form-control', rows: "5" %>
       </div>
-
       <%= f.submit "応募する", class: "btn btn-primary" %>
     <% end %>
   </div>
