--- a/app/views/microposts/show.html.erb
+++ b/app/views/microposts/show.html.erb
@@ -1,5 +1,5 @@
-<div class="row post-show row">
-  <div class="col-md-6 col-md-offset-3 col-xs-10 col-xs-offset-1">
+<div class="post-container">
+  <div class="row post-show">
     <div class="post-area post-area-height">
       <div class="post-area-left">
         <div class="post-staff">
@@ -113,6 +113,5 @@
         </div>
       <% end %>
     </div>
-
   </div>
 </div>
