--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -44,3 +44,12 @@
     font-size: 0.7em;
   }
 }
+
+.user-tag {
+  border: 1px solid #0099cc;
+  border-radius: 3px;
+  padding: 5px;
+  display: inline-block;
+  margin-right: 5px;
+  margin-bottom: 5px;
+}
