--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -229,5 +229,8 @@
     <div class="row">
       パスワードの再設定は<%= link_to "こちら", change_password_user_path %>
     </div>
+    <div class="row">
+      退会のお手続きは<%= link_to "こちら", confirm_user_delete_path, method: :post %>
+    </div>
   </div>
 </div>
