--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -89,6 +89,7 @@
         </table>
       </div>
     </div>
+    <% if !current_user?(@user) && !@user.staff %>
     <div class="col-md-6">
       <div class="user-info-detail">
         <div>投稿履歴</div>
