--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -117,6 +117,7 @@
         </div>
       </div>
     </div>
+    <% end %>
     <% if !@user.staff? %>
       <div class="col-md-6">
         <div class="user-info-detail">
