--- a/app/views/static_pages/usage.html.erb
+++ b/app/views/static_pages/usage.html.erb
@@ -3,7 +3,7 @@
 </div>
 <div class="hairiah-feature row text-center" id="usage">
   <span class="feature-text arrow-border">
-    Hairiahの簡単な利用方法
+    Hairiahの利用方法
   </span>
   <div class="feature-outer row">
     <div class="col-md-3 text-center col-md-offset-1-5">
@@ -39,7 +39,7 @@
   </div>
 </div>
 <div class="row text-center">
-  <div class="col-md-6">
+  <div class="col-md-6 usage-search-btn-upper">
     <%= link_to "さっそく応募してみる", users_path, class: "btn btn-primary" %>
   </div>
   <div class="col-md-5">
