--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,8 +13,10 @@
     </div>
     <div class="col-xs-7 col-xs-offset-1 col-md-12 col-md-offset-0">
       <div class=""><%= @user.prefecture.name %> <%= @user.area.name %></div>
-      <div class="user-tag"><%= @user.hair_type %></div>
-      <div class="user-tag"><%= @user.hair_style %></div>
+      <% if !@user.staff %>
+        <div class="user-tag"><%= @user.hair_type %></div>
+        <div class="user-tag"><%= @user.hair_style %></div>
+      <% end %>
       <% if @user.hair_permed? %>
         <div class="user-tag">パーマ</div>
       <% end %>
@@ -43,7 +45,33 @@
       </section>
       <%= render 'follow_form' if logged_in? %>
     </div>
+    <div class="col-xs-12">
+    <div class="post-table alt-table-responsive">
+    <% if @user.staff %>
+      <table class="table">
+
+        <thead>
+          投稿履歴
+          <tr>
+            <th class="col-xs-6">投稿タイトル</th>
+            <th class="col-xs-3">投稿日</th>
+            <th class="col-xs-3">応募数</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @user.microposts.each do |post| %>
+            <tr>
+              <td><%= link_to post.title, micropost_path(post) %></td>
+              <td><%= post.created_at_to_date %></td>
+              <td><%= post.applies.count %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    <% end %>
   </div>
+</div>
+</div>
   <div class="col-xs-12 col-md-8">
     <% if !current_user?(@user) && logged_in? && ((@user.staff == false && current_user.staff == true) || (current_user.staff == false && @user.staff == true))  %>
       <section class="message_box">
@@ -89,33 +117,6 @@
         </table>
       </div>
     </div>
-    <% if @user.staff %>
-      <div class="col-md-6">
-        <div class="user-info-detail">
-          <div>投稿履歴</div>
-          <div>
-            <table class="table">
-              <thead>
-                <tr>
-                  <th scope="col">投稿タイトル</th>
-                  <th scope="col">投稿日</th>
-                  <th scope="col">応募数</th>
-                </tr>
-              </thead>
-              <tbody>
-                <% @user.microposts.each do |post| %>
-                  <tr>
-                    <td><%= link_to post.title, micropost_path(post) %></td>
-                    <td><%= post.created_at_to_date %></td>
-                    <td><%= post.applies.count %></td>
-                  </tr>
-                <% end %>
-              </tbody>
-            </table>
-          </div>
-        </div>
-      </div>
-    <% end %>
     <% if !@user.staff? %>
       <div class="col-md-6">
         <div class="user-info-detail">
