--- a/app/views/static_pages/legal.html.erb
+++ b/app/views/static_pages/legal.html.erb
@@ -6,19 +6,7 @@
   <tbody>
     <tr>
       <td>販売業者</td>
-      <td>Hairiah 鵜飼真</td>
-    </tr>
-    <tr>
-      <td>運営責任者</td>
-      <td>鵜飼真</td>
-    </tr>
-    <tr>
-      <td>郵便番号</td>
-      <td>0000000000</td>
-    </tr>
-    <tr>
-      <td>住所</td>
-      <td>ーーーーーーーー</td>
+      <td>Hairiah</td>
     </tr>
     <tr>
       <td>販売価格</td>
@@ -31,24 +19,53 @@
     <tr>
       <td>支払い方法</td>
       <td>
-        クレジットカード決済、およびPayPalアカウントによる決済
+        ●クレジットカード決済
         <br>
-        <br>
-        ● クレジットカード決済について
         <br>
         一括払いのみとなっております。またお使いいただけるクレジットカードは以下になります。
         <br>
-        VISA / Master Card / American Express / Diners
+        VISA / Master Card / American Express / Diners / JCB
         <br>
         <br>
-        ● PayPalアカウントによる決済について
+        ●コンビニ決済
         <br>
-        PayPalアカウントによる決済では、別途PayPalへの支払情報の登録が必要になります。詳しくはPayPalのホームページをご覧ください。
+        <br>
+        お使いいただけるコンビニは以下になります。
+        <br>
+        ローソン / セイコーマート
+        <br>
+        <br>
+        当サービスは、<a href="https://www.epsilon.jp/">クレジットカード決済代行のGMOイプシロン株式会社</a>の決済代行システムを利用しております。
+        <br>
+        ご注文後、イプシロン決済画面へ移動いたしますので決済を完了させてください。
+        <br>
+        安心してお支払いをしていただくために、お客様の情報がイプシロンサイト経由で送信される際にはSSL(128bit)による暗号化通信で行い、
+        <br>
+        クレジットカード情報は当サイトでは保有せず、同社で厳重に管理しております。
+        <br>
+        <br>
+        なお、コンビニ決済の場合、払込票番号はイプシロンよりご案内がございます。
+        <br>
+        お支払い後に発行される領収書には「インターネットイプシロン」と表示されます。
+        <br>
+        <br>
+        なお、当サービスに関するお問い合わせは、上記メールアドレスまでお願いいたします。
       </td>
     </tr>
     <tr>
       <td>支払い時期</td>
-      <td>初回の支払いは、有料プラン登録時に実施され、次回支払いは翌月の同日同時間となります（翌月に同日がない場合は、翌月末日の同時間となります）。</td>
+      <td>
+        ●クレジットカード決済
+        <br>
+        <br>
+        ご利用のカード会社ごとに異なります。
+        <br>
+        <br>
+        ●コンビニ決済
+        <br>
+        <br>
+        ご注文日から1週間以内にお支払いください。
+      <td>
     </tr>
     <tr>
       <td>商品の引渡時期</td>
@@ -67,6 +84,11 @@
         当社所定の規定に従ってご解約頂けます。ただし、すでに支払い完了した代金に関しての返金はお受け出来ません。
       </td>
     </tr>
+    <tr>
+      <td>メールアドレス</td>
+      <td>hairiah.info@gmail.com</td>
+    </tr>
   <tbody>
-
 </table>
+
+<div>※上記以外の事項に関しましては、お取引の際に請求があれば遅延なく提示いたします。</div>
