--- a/app/views/static_pages/legal.html.erb
+++ b/app/views/static_pages/legal.html.erb
@@ -91,4 +91,4 @@
   <tbody>
 </table>
 
-<div>※上記以外の事項に関しましては、お取引の際に請求があれば遅延なく提示いたします。</div>
+<div style="margin-bottom:30px;">※上記以外の事項に関しましては、お取引の際に請求があれば遅延なく提示いたします。</div>
