--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,6 +10,7 @@
       <% end %>
       <div><%= @user.name %></div>
       最終ログイン: <%= @user.last_accessed_at %>
+      <div><%= link_to "プロフィールの編集", edit_user_path(@user) %></div>
     </div>
     <div class="col-xs-7 col-xs-offset-1 col-md-12 col-md-offset-0">
       <div class=""><%= @user.prefecture.name %> <%= @user.area.name %></div>
